--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,56 @@
 .App {
+  border: 2px solid black;
   text-align: center;
+}
+
+.tableTransactions{
+  width: 90%;
+ margin: auto;
+}
+form{
+  
+  margin: auto;
+  text-align: center;
+  width: 80%;
+  background-color: rgb(159, 159, 249);
+}
+
+form input, button{
+  margin: 10px;
+  text-align: center;
+}
+
+
+.searchSection{
+  text-align: center;
+  margin: auto;
+  height:50px;
+  width: 80%;
+}
+
+.searchSection input{
+  color: black;
+  text-align: center;
+  height: 40px;
+  width: 100%;
+  background-color: aquamarine;
+}
+
+.tableTransactions  caption{
+  color: black;
+  font-size: 20px;
+}
+
+.tableTransactions  th{
+  width: 10%;
+  height: 30px;
+  background-color: aqua;
+}
+
+.tableTransactions  td{
+  width: 10%;
+  text-align: center;
+  background-color: azure;
 }
 
 .App-logo {
@@ -35,4 +86,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.h2{
+  height: 30px;
+  display: flex;
+  justify-content: center;
+
 }
